syntax = "proto3";
package com.grpc;
option java_multiple_files=true;

enum Action{
  ATTACK=0;
}

message InputMap{
  sint32 input_x=1;
  sint32 input_y=2;
  sint32 input_z=3;

  sint32 mouse_x=4;
  sint32 mouse_y=5;
}

message InputMessage{
  InputMap input=1;
  repeated Action actions=2;
}

message HelloRequest{
  string token=1;
  InputMessage message=2;
//  map<string, string> bagOfTricks=6;
}

message PlayerPosition{
  string player=1;
  float position_x=2;
  float position_y=3;
}

message HelloResponse{
  string token=1;
  repeated PlayerPosition positions=2;
}

service GreetingService{
  rpc greeting(stream HelloRequest) returns (stream HelloResponse);
}
